style.css
/* ... */
.col-md-6.right{
  /* background-color: black; */
}

@-webkit-keyframes fadeIn-right{
  0%{
    opacity: 0;
    -webkit-transform: translateX(50px);
  }
  100%{
    opacity: 1;
    -webkit-transofmr: translateX(0);
  }
}
@-o-keyframes fadeIn-right{
  0%{
    opacity: 0;
    -o-transform: translateX(50px);
  }
  100%{
    opacity: 1;
    -o-transofmr: translateX(0);
  }
}
@-moz-keyframes fadeIn-right{
  0%{
    opacity: 0;
    -moz-transform: translateX(50px);
  }
  100%{
    opacity: 1;
    -moz-transofmr: translateX(0);
  }
}
@keyframes fadeIn-right{
  0%{
    opacity: 0;
    transform: translateX(50px);
  }
  100%{
    opacity: 1;
    transofmr: translateX(0);
  }
}

/* ------------------------about ------------------------------ */

.right-title{
  display: inline-block;
  vertical-align: middle;
  margin-left: 5%;
  color: rgb(248, 240, 131);
  letter-spacing: 5px;
}

.right-title h1{
  margin: 0;
  padding: 0;
  margin-left: 4%;
}

.about-section p{
  margin: 0;
  padding: 0;
  margin-left: 3%;
  color: rgb(230, 230, 230);
  font-size: 0.9rem;
  font-family: 'Montserrat', sans-serif;
  letter-spacing: 1px;
  margin-top: 3%;
  -webkit-animation: fadeIn-right 1.35s ease-in-out;
  -moz-animation: fadeIn-right 1.35s ease-in-out;
  -o-animation: fadeIn-right 1.35s ease-in-out;
  animation: fadeIn-right 1.35s ease-in-out;
}

.fa-caret-right{
  font-size: 1rem;
}
/* ---------------------------tools-------------------------- */

.tools{
  margin-left: 6.25%;
  margin-top: 3%;
  font-family: 'Montserrat', sans-serif;
}

.tools p>span{
  font-size: 0.9rem;
  color: rgb(230, 230, 230);
  letter-spacing: 1px;
  margin-left: 1.65%;
  display: inline-block;
  -webkit-animation: fadeIn-right 1.65s ease-in-out;
  -moz-animation: fadeIn-right 1.65s ease-in-out;
  -o-animation: fadeIn-right 1.65s ease-in-out;
  animation: fadeIn-right 1.65s ease-in-out;
}

.tools p:before{
  font-family: FontAwesome;
  content: "\f7d9";
  margin-right: 4px;  
  color:rgb(248, 240, 131);
  -webkit-animation: fadeIn-right 1.35s ease-in-out;
  -moz-animation: fadeIn-right 1.35s ease-in-out;
  -o-animation: fadeIn-right 1.35s ease-in-out;
  animation: fadeIn-right 1.35s ease-in-out;
}

/* ---------------------------languages-------------------------- */


.languages{
  margin-left: 6.25%;
  margin-top: 2%;
  font-family: 'Montserrat', sans-serif;
}

.languages p>span{
  font-size: 0.9rem;
  color: rgb(230, 230, 230);
  letter-spacing: 1px;
  margin-left: 1%;
  display: inline-block;
  -webkit-animation: fadeIn-right 1.65s ease-in-out;
  -moz-animation: fadeIn-right 1.65s ease-in-out;
  -o-animation: fadeIn-right 1.65s ease-in-out;
  animation: fadeIn-right 1.65s ease-in-out;
}

.languages p:before{
  font-family: FontAwesome;
  content: "\f121";
  margin-right: 4px;  
  color:rgb(248, 240, 131);
  -webkit-animation: fadeIn-right 1.35s ease-in-out;
  -moz-animation: fadeIn-right 1.35s ease-in-out;
  -o-animation: fadeIn-right 1.35s ease-in-out;
  animation: fadeIn-right 1.35s ease-in-out;
}


/* ---------------------------github------------------------ */

.github{
  margin-left: 6.5%;
  margin-top: 2%;
  font-family: 'Montserrat', sans-serif;
  max-width: 51%;
}
.github p>span{
  font-size: 0.9rem;
  color: rgb(230, 230, 230);
  letter-spacing: 1px;
  margin-left: 2.75%;
  display: inline-block;
  -webkit-animation: fadeIn-right 1.65s ease-in-out;
  -moz-animation: fadeIn-right 1.65s ease-in-out;
  -o-animation: fadeIn-right 1.65s ease-in-out;
  animation: fadeIn-right 1.65s ease-in-out;
}

.github p:before{
  font-family: FontAwesome;
  content: "\f09b";
  margin-right: 4px;  
  color:rgb(248, 240, 131);
  -webkit-animation: fadeIn-right 1.35s ease-in-out;
  -moz-animation: fadeIn-right 1.35s ease-in-out;
  -o-animation: fadeIn-right 1.35s ease-in-out;
  animation: fadeIn-right 1.35s ease-in-out;
  
}
a{
  text-decoration: none;
}

/* ---------------------------discord-------------------------- */

.discord{
  margin-left: 6.25%;
  margin-top: 2%;
  font-family: 'Montserrat', sans-serif;
}

.discord p>span{
  font-size: 0.9rem;
  color: rgb(230, 230, 230);
  letter-spacing: 1px;
  margin-left: 1%;
  display: inline-block;
  -webkit-animation: fadeIn-right 1.65s ease-in-out;
  -moz-animation: fadeIn-right 1.65s ease-in-out;
  -o-animation: fadeIn-right 1.65s ease-in-out;
  animation: fadeIn-right 1.65s ease-in-out;
}

.discord p:before{
  font-family: FontAwesome;
  content: "\f392";
  margin-right: 4px;  
  color:rgb(248, 240, 131);
  -webkit-animation: fadeIn-right 1.35s ease-in-out;
  -moz-animation: fadeIn-right 1.35s ease-in-out;
  -o-animation: fadeIn-right 1.35s ease-in-out;
  animation: fadeIn-right 1.35s ease-in-out;
}


/* ---------------------------shapes------------------------- */

.shapes{
  margin-left: 6.5%;
  font-family: 'Montserrat', sans-serif;
  -webkit-animation: fadeIn-right 1.35s ease-in-out;
  -moz-animation: fadeIn-right 1.35s ease-in-out;
  -o-animation: fadeIn-right 1.35s ease-in-out;
  animation: fadeIn-right 1.35s ease-in-out;
  bottom: 0;
  margin-bottom: 0;
}

.square{
  height: 20px;
  width: 20px;
  background-color: #e6e6e6;
  display: inline-block;
}
.square2{
  height: 20px;
  width: 20px;
  background-color: #ebe8d3;
  display: inline-block;
  margin-left: 0.65%;
}
.square3{
  height: 20px;
  width: 20px;
  background-color: #f0eac0;
  display: inline-block;
  margin-left: 0.65%;
}
.square4{
  height: 20px;
  width: 20px;
  background-color: #f3ecac;
  display: inline-block;
  margin-left: 0.55%;
}
.square5{
  height: 20px;
  width: 20px;
  background-color: #f6ee98;
  display: inline-block;
  margin-left: 0.55%;
}
.square6{
  height: 20px;
  width: 20px;
  background-color: #f8f083;
  display: inline-block;
  margin-left: 0.55%;
}
.square7{
  height: 20px;
  width: 20px;
  background-color: #ffcd74;
  display: inline-block;
  margin-left: 0.65%;
}
.square8{
  height: 20px;
  width: 20px;
  background-color: #ffa884;
  display: inline-block;
  margin-left: 0.55%;
}
/* ... */

